welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: not found: value estSurBisicuit
		if (estSurBisicuit(true))
                    ^